Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE 0x/xx/2009
27th Alpha Release

NEWS:


NEW: [features/improvements]
+Add automatic file backup option to periodically backup buffer contents.
+Add Search/Replace in selection option to find dialog.
+Patch from (Hasan Aljudy) to show cwd and add e! command to commandbar
+Automatically show path completion list when doing an e or cd command.
+Display the documents EOL mode in the status bar.
+Add support for XText (patch from Igor Dejanovic).
+Support XText in Codebrowser (patch from Igor Dejanovic).
+Complete re-write of vi emulation support (patch from Hasan Aljudy)
+Add option to start in Normal mode by default when using vi emulation (patch from Hasan Aljudy).
+Codebrowser syncronizes with caret position. (patch from Igor Dejanovic)
+Find dialog remembers last position throughout session.
+Add support for the Cobra programming language.
+Support opening files by a uri.

BUG FIXES:
+Fix python autocomp from failing when word was next to a boundry character.
+Don't do a replace when there is no selection.
+Fix number of minor bugs related to finding accented characters.
+Fix bug in batch file comment command, ensure a space is between 'rem' and the comment text.
+Fix bug on Windows that could cause an unhandled exception error when closing the
preferences dialog after closing the last main window.
+Fix regression in html autocomp where cursor position would be incorrectly
placed after the inserted tag.
+Fix Launch not updating after a Save As on Linux.
+Fix unicode handling error in session file saving.
+Fix Editra Style Sheet output from Style Editor to be in sorted order.
+Fix improper highlighting in django and mako templates due to improper handling
of Windows eol characters.

#-----------------------------------------------------------------------------#